Pipeline ehn (#2708)
* added coverage report

* excluding alt and exp test cases

* added slack notification

* added checkstyle report

* added sonar to build

* added jacoco step for int testsuite